-Canvas sizing bug fixed (smaller canvas were dropping down under the left panels. -Fixed issue where text with spaces in it was word wrapping

--- a/css/style.css
+++ b/css/style.css
@@ -387,6 +387,7 @@ main {
 }
 
 #maineditpane {
+    width: 1000px;
     background-color: #E2F4BE;
 }
 
